# django-user-email

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  makemigrations.py  noxfile.py  pyproject.toml  runtests.py
.github/workflows/: ci.yml  publish.yml
account/: .pre-commit-config.yaml  models.py
account/migrations/: 0001_initial.py
tests/: test_models.py  test_settings.py
user_email/: admin.py  apps.py  factory.py  forms.py  models.py  tests.py
user_email/migrations/: 0001_initial.py
