[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'
extend-exclude = '''
/(
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip_glob = "*/migrations/*.py"

[tool.poetry]
name = "django-user-email"
version = "0.2.0"
description = "Custom, simple Django User model with email as username"
authors = ["Khasbilegt.TS <khasbilegt.ts@gmail.com>"]
license = "MIT"
homepage = "https://github.com/khasbilegt/django-user-email"
repository = "https://github.com/khasbilegt/django-user-email"
keywords = ["django", "model", "user", "email", "username", "custom"]
readme = "README.md"
packages = [
    { include = "user_email"},
]
include = [
    "LICENSE",
    "README.md"
]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^2.2"

[tool.poetry.dev-dependencies]
factory-boy = "^3.2.0"
black = "^21.9b0"
flake8 = "^3.9.2"
isort = {version: "^5.9.3", python: "^3.6.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
